<?xml version="1.0"?>
<package format="2">
  <name>ros2d2</name>
  <version>0.0.0</version>
  <description>The ros2d2 package</description>

  <maintainer email="k.koide@aist.go.jp">koide</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
